--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>VRST Boilerplate</title>
+    <title>Web Systems and Technologies</title>
   </head>
   <body>
+    <!-- 
+
+      Group Members:
+      - Zomer Gregorio
+      - Mark Joseph Yoldi
+      - Joshua Pamisa
+      - Lourence Jacaba
+
+     -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
